--- a/old-akb.html
+++ b/old-akb.html
@@ -487,7 +487,7 @@
                             4 пункта приёма
                         </div>
                         <div class="offer__items">
-                            <div class="footer-office">
+                            <div class="footer-office ">
                                 <div class="footer-office__icon">
                                     <img src="img/mark2.svg" alt="">
                                 </div>
@@ -507,7 +507,7 @@
                                 </div>
                             </div>
 
-                            <div class="footer-office">
+                            <div class="footer-office ">
                                 <div class="footer-office__icon">
                                     <img src="img/mark2.svg" alt="">
                                 </div>
@@ -527,7 +527,7 @@
                                 </div>
                             </div>
 
-                            <div class="footer-office">
+                            <div class="footer-office ">
                                 <div class="footer-office__icon">
                                     <img src="img/mark2.svg" alt="">
                                 </div>
@@ -547,7 +547,7 @@
                                 </div>
                             </div>
 
-                            <div class="footer-office">
+                            <div class="footer-office ">
                                 <div class="footer-office__icon">
                                     <img src="img/mark2.svg" alt="">
                                 </div>
@@ -575,7 +575,7 @@
             </section>
 
             <section class="become-client">
-                <img src="img/client.jpg" alt="" class="become-client__img">
+                <img src="img/client2.jpg" alt="" class="become-client__img">
                 <div class="container">
                     <div class="become-client__content">
                         <div class="text30 text21-tablet bold-text">
@@ -756,7 +756,7 @@
             <div class="footer-places">
                 <div class="container">
                     <div class="footer-places__inner">
-                        <div class="footer-office">
+                        <div class="footer-office ">
                             <div class="footer-office__icon">
                                 <img src="img/mark2.svg" alt="">
                             </div>
@@ -776,7 +776,7 @@
                             </div>
                         </div>
 
-                        <div class="footer-office">
+                        <div class="footer-office ">
                             <div class="footer-office__icon">
                                 <img src="img/mark2.svg" alt="">
                             </div>
@@ -796,7 +796,7 @@
                             </div>
                         </div>
 
-                        <div class="footer-office">
+                        <div class="footer-office _active">
                             <div class="footer-office__icon">
                                 <img src="img/mark2.svg" alt="">
                             </div>
@@ -816,7 +816,7 @@
                             </div>
                         </div>
 
-                        <div class="footer-office">
+                        <div class="footer-office ">
                             <div class="footer-office__icon">
                                 <img src="img/mark2.svg" alt="">
                             </div>
@@ -853,6 +853,105 @@
 
         </footer>
     </div>
+
+    <div class="modal" id="shopsModal">
+        <div class="modal__bg _close-modal"></div>
+        <div class="modal__dialog">
+            <div class="modal__top">
+                <div class="text30 text21-tablet bold-text">
+                    Магазины
+                </div>
+            </div>
+            <div class="modal__shops">
+                <div class="footer-office ">
+                    <div class="footer-office__icon">
+                        <img src="img/mark2.svg" alt="">
+                    </div>
+                    <div class="footer-office__content">
+                        <div class="footer-office__address text12">
+                            Москва, ул. Вертолетчиков, д4к2
+                        </div>
+                        <a href="tel:+79266122290" class="footer-office__phone text16 bold-text">
+                            +7 (926) 612-22-90
+                        </a>
+                        <div class="footer-office__time">
+                            <div class="text12">Время работы:</div>
+                            <div class="text12">
+                                Пн-Пт с 10:00 до 20:00 <br> Сб-Вс с 10:00 до 18:00
+                            </div>
+                        </div>
+                    </div>
+                </div>
+
+                <div class="footer-office ">
+                    <div class="footer-office__icon">
+                        <img src="img/mark2.svg" alt="">
+                    </div>
+                    <div class="footer-office__content">
+                        <div class="footer-office__address text12">
+                            Москва, ул. Ташкентская 28с1, 2 этаж, подъем на пандус, п. 235
+                        </div>
+                        <a href="tel:+79011833800" class="footer-office__phone text16 bold-text">
+                            +7 (901) 183-38-00
+                        </a>
+                        <div class="footer-office__time">
+                            <div class="text12">Время работы:</div>
+                            <div class="text12">
+                                Пн-Пт с 10:00 до 19:00 <br> Сб-Вс с 10:00 до 18:00
+                            </div>
+                        </div>
+                    </div>
+                </div>
+
+                <div class="footer-office ">
+                    <div class="footer-office__icon">
+                        <img src="img/mark2.svg" alt="">
+                    </div>
+                    <div class="footer-office__content">
+                        <div class="footer-office__address text12">
+                            Москва, МКАД, 23-й километр, внешняя сторона, вл3к2
+                        </div>
+                        <a href="tel:+79163398859" class="footer-office__phone text16 bold-text">
+                            +7 (916) 339-88-59
+                        </a>
+                        <div class="footer-office__time">
+                            <div class="text12">Время работы:</div>
+                            <div class="text12">
+                                Пн-Пт с 08:00 до 20:00 <br> Сб-Вс с 09:00 до 20:00
+                            </div>
+                        </div>
+                    </div>
+                </div>
+
+                <div class="footer-office ">
+                    <div class="footer-office__icon">
+                        <img src="img/mark2.svg" alt="">
+                    </div>
+                    <div class="footer-office__content">
+                        <div class="footer-office__address text12">
+                            Люберцы, ул.Электрификации д.3
+                        </div>
+                        <a href="tel:+79011833800" class="footer-office__phone text16 bold-text">
+                            +7 (901) 183-38-00
+                        </a>
+                        <div class="footer-office__time">
+                            <div class="text12">Время работы:</div>
+                            <div class="text12">
+                                Пн-Пт с 10:00 до 19:00 <br> Сб-Вс с 10:00 до 18:00
+                            </div>
+                        </div>
+                    </div>
+                </div>
+
+            </div>
+        </div>
+        <button class="modal__close _close-modal">
+            <svg width="34" height="34" viewBox="0 0 34 34" fill="none" xmlns="http://www.w3.org/2000/svg">
+                <path d="M33 1L1 33M1 1L33 33" stroke="white" stroke-width="1.3" stroke-linecap="round" />
+            </svg>
+        </button>
+    </div>
+
 
     <script src="js/libs.min.js"></script>
     <script src="js/main.min.js"></script>
