--- a/index.html
+++ b/index.html
@@ -475,7 +475,7 @@
                                     <path d="M9.96926 18.4719C10.8886 18.1077 11.3743 17.0323 11.062 16.0869C10.9406 15.714 10.6371 15.3757 8.7117 13.4504L6.50014 11.2388L22.9524 11.1955L39.4134 11.1521L39.8037 10.9353C40.0119 10.8139 40.3067 10.545 40.4542 10.3455C40.6883 9.99861 40.7144 9.90321 40.7144 9.28744C40.7144 8.67167 40.6883 8.57627 40.4542 8.22936C40.3067 8.02988 40.0119 7.76103 39.8037 7.63961L39.4134 7.42279L22.9351 7.39677L6.46545 7.37942L8.72038 5.09847C10.7585 3.05169 10.9927 2.78283 11.0967 2.41858C11.4003 1.28244 10.6371 0.120283 9.51828 0.0248821C8.49488 -0.0531733 8.68568 -0.209284 4.30592 4.15314C1.6954 6.76365 0.281738 8.23803 0.16899 8.47219C-0.0391548 8.89716 -0.0565003 9.59966 0.125629 10.0506C0.307757 10.493 7.95717 18.151 8.46019 18.3939C8.8418 18.5847 9.59633 18.6194 9.96926 18.4719Z" fill="black" />
                                 </svg>
                             </div>
-                            <div class="swiper-button swiper-button-prev">
+                            <div class="swiper-button swiper-button-next">
                                 <svg width="41" height="19" viewBox="0 0 41 19" fill="none" xmlns="http://www.w3.org/2000/svg">
                                     <path d="M30.8169 0.528059C29.8976 0.892317 29.4119 1.96774 29.7241 2.91308C29.8455 3.28601 30.1491 3.62425 32.0744 5.54961L34.286 7.76118L17.8337 7.80454L1.3727 7.84791L0.982422 8.06473C0.774275 8.18615 0.479399 8.455 0.331961 8.65448C0.0977958 9.00139 0.0717773 9.09679 0.0717773 9.71256C0.0717773 10.3283 0.0977958 10.4237 0.331961 10.7706C0.479399 10.9701 0.774275 11.239 0.982422 11.3604L1.3727 11.5772L17.851 11.6032L34.3207 11.6206L32.0658 13.9015C30.0276 15.9483 29.7935 16.2172 29.6894 16.5814C29.3859 17.7176 30.1491 18.8797 31.2679 18.9751C32.2912 19.0532 32.1004 19.2093 36.4802 14.8469C39.0907 12.2363 40.5044 10.762 40.6171 10.5278C40.8253 10.1028 40.8426 9.40034 40.6605 8.94935C40.4784 8.50704 32.829 0.848953 32.3259 0.606115C31.9443 0.415314 31.1898 0.380621 30.8169 0.528059Z" fill="black" />
                                 </svg>
@@ -914,7 +914,7 @@
             <div class="footer-places">
                 <div class="container">
                     <div class="footer-places__inner">
-                        <div class="footer-office">
+                        <div class="footer-office ">
                             <div class="footer-office__icon">
                                 <img src="img/mark2.svg" alt="">
                             </div>
@@ -934,7 +934,7 @@
                             </div>
                         </div>
 
-                        <div class="footer-office">
+                        <div class="footer-office ">
                             <div class="footer-office__icon">
                                 <img src="img/mark2.svg" alt="">
                             </div>
@@ -954,7 +954,7 @@
                             </div>
                         </div>
 
-                        <div class="footer-office">
+                        <div class="footer-office _active">
                             <div class="footer-office__icon">
                                 <img src="img/mark2.svg" alt="">
                             </div>
@@ -974,7 +974,7 @@
                             </div>
                         </div>
 
-                        <div class="footer-office">
+                        <div class="footer-office ">
                             <div class="footer-office__icon">
                                 <img src="img/mark2.svg" alt="">
                             </div>
@@ -1011,6 +1011,105 @@
 
         </footer>
     </div>
+
+    <div class="modal" id="shopsModal">
+        <div class="modal__bg _close-modal"></div>
+        <div class="modal__dialog">
+            <div class="modal__top">
+                <div class="text30 text21-tablet bold-text">
+                    Магазины
+                </div>
+            </div>
+            <div class="modal__shops">
+                <div class="footer-office ">
+                    <div class="footer-office__icon">
+                        <img src="img/mark2.svg" alt="">
+                    </div>
+                    <div class="footer-office__content">
+                        <div class="footer-office__address text12">
+                            Москва, ул. Вертолетчиков, д4к2
+                        </div>
+                        <a href="tel:+79266122290" class="footer-office__phone text16 bold-text">
+                            +7 (926) 612-22-90
+                        </a>
+                        <div class="footer-office__time">
+                            <div class="text12">Время работы:</div>
+                            <div class="text12">
+                                Пн-Пт с 10:00 до 20:00 <br> Сб-Вс с 10:00 до 18:00
+                            </div>
+                        </div>
+                    </div>
+                </div>
+
+                <div class="footer-office ">
+                    <div class="footer-office__icon">
+                        <img src="img/mark2.svg" alt="">
+                    </div>
+                    <div class="footer-office__content">
+                        <div class="footer-office__address text12">
+                            Москва, ул. Ташкентская 28с1, 2 этаж, подъем на пандус, п. 235
+                        </div>
+                        <a href="tel:+79011833800" class="footer-office__phone text16 bold-text">
+                            +7 (901) 183-38-00
+                        </a>
+                        <div class="footer-office__time">
+                            <div class="text12">Время работы:</div>
+                            <div class="text12">
+                                Пн-Пт с 10:00 до 19:00 <br> Сб-Вс с 10:00 до 18:00
+                            </div>
+                        </div>
+                    </div>
+                </div>
+
+                <div class="footer-office ">
+                    <div class="footer-office__icon">
+                        <img src="img/mark2.svg" alt="">
+                    </div>
+                    <div class="footer-office__content">
+                        <div class="footer-office__address text12">
+                            Москва, МКАД, 23-й километр, внешняя сторона, вл3к2
+                        </div>
+                        <a href="tel:+79163398859" class="footer-office__phone text16 bold-text">
+                            +7 (916) 339-88-59
+                        </a>
+                        <div class="footer-office__time">
+                            <div class="text12">Время работы:</div>
+                            <div class="text12">
+                                Пн-Пт с 08:00 до 20:00 <br> Сб-Вс с 09:00 до 20:00
+                            </div>
+                        </div>
+                    </div>
+                </div>
+
+                <div class="footer-office ">
+                    <div class="footer-office__icon">
+                        <img src="img/mark2.svg" alt="">
+                    </div>
+                    <div class="footer-office__content">
+                        <div class="footer-office__address text12">
+                            Люберцы, ул.Электрификации д.3
+                        </div>
+                        <a href="tel:+79011833800" class="footer-office__phone text16 bold-text">
+                            +7 (901) 183-38-00
+                        </a>
+                        <div class="footer-office__time">
+                            <div class="text12">Время работы:</div>
+                            <div class="text12">
+                                Пн-Пт с 10:00 до 19:00 <br> Сб-Вс с 10:00 до 18:00
+                            </div>
+                        </div>
+                    </div>
+                </div>
+
+            </div>
+        </div>
+        <button class="modal__close _close-modal">
+            <svg width="34" height="34" viewBox="0 0 34 34" fill="none" xmlns="http://www.w3.org/2000/svg">
+                <path d="M33 1L1 33M1 1L33 33" stroke="white" stroke-width="1.3" stroke-linecap="round" />
+            </svg>
+        </button>
+    </div>
+
 
     <script src="js/libs.min.js"></script>
     <script src="js/main.min.js"></script>
