--- a/catalog-item.html
+++ b/catalog-item.html
@@ -436,32 +436,34 @@
 
             <section class="req req2">
                 <div class="container">
-                    <form action="" class="req-form">
-                        <div class="text30 text20-tablet text22-mob bold-text">
-                            Сдать старый аккумулятор <br>
-                            по выгодным ценам!
-                        </div>
-                        <div class="req-form__text">
-                            <div class="text14 text12-tablet">
-                                Введите свой номер и наш консультант перезвонит вам
+                    <div class="req2__inner">
+                        <form action="" class="req-form">
+                            <div class="text30 text20-tablet text22-mob bold-text">
+                                Сдать старый аккумулятор <br>
+                                по выгодным ценам!
                             </div>
-                        </div>
-                        <div class="req-form__grid">
-                            <fieldset class="fg">
-                                <input type="tel" placeholder="+7 (___) ___-__-__">
-                            </fieldset>
-                            <button class="m-btn m-btn-yellow">
-                                <span>Оставить заявку</span>
-                            </button>
-                        </div>
-                        <div class="req-form__hint">
-                            <div class="text10">
-                                Нажимая кнопку «Оставить заявку» я даю свое согласие на обработку <a href="">персональных данных</a>
+                            <div class="req-form__text">
+                                <div class="text14 text12-tablet">
+                                    Введите свой номер и наш консультант перезвонит вам
+                                </div>
                             </div>
-                        </div>
-                    </form>
+                            <div class="req-form__grid">
+                                <fieldset class="fg">
+                                    <input type="tel" placeholder="+7 (___) ___-__-__">
+                                </fieldset>
+                                <button class="m-btn m-btn-yellow">
+                                    <span>Оставить заявку</span>
+                                </button>
+                            </div>
+                            <div class="req-form__hint">
+                                <div class="text10">
+                                    Нажимая кнопку «Оставить заявку» я даю свое согласие на обработку <a href="">персональных данных</a>
+                                </div>
+                            </div>
+                        </form>
+                        <img src="img/req3.png" alt="" class="req__img2">
+                    </div>
                 </div>
-                <img src="img/req3.png" alt="" class="req__img2">
             </section>
 
             <section class="catalog-text">
